1. Implemented a custom notification icon class that will generate an event when the balloon ToolTip is clicked.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3826 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -208,11 +208,6 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "NotifyIconBalloonTip.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
                     RelPath = "Preferences.cs"
                     SubType = "Form"
                     BuildAction = "Compile"
@@ -246,6 +241,11 @@
                     RelPath = "ServerInfo.resx"
                     DependentUpon = "ServerInfo.cs"
                     BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "ShellNotifyIcon.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
                 />
                 <File
                     RelPath = "SyncLog.cs"
