Simplified the Flaim Handle code.  Removed the handleTable.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3842 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
+++ b/simias/src/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
@@ -119,7 +119,7 @@ if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb $(Solution
 				OutputFile=".\Debug/FlaimWrapper.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Dev\iFolder\simias\external\flaim\nt\release"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\external\flaim\nt\release&quot;"
 				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/FlaimWrapper.pdb"
