--- a/Simias.csproj
+++ b/Simias.csproj
@@ -274,6 +274,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Common\WebState.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Credentials\Credentials.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
