Added code to produce a NeedCredentials event.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3876 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/SimiasClient.csproj
+++ b/simias/src/SimiasClient/SimiasClient.csproj
@@ -199,6 +199,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "NeedCredentialsEventArgs.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "NodeEventArgs.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
