Added code to produce a NeedCredentials event.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3876 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -284,6 +284,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Credentials\NeedCredentialsEventSubscriber.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Domain\DomainAgent.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
