Makefile.mingw is not generated by configure, so the configured variables won't resolve.  I replaced them with some variables that are hard-coded.  We have to create a "simias" directory and place it in the win32-dev directory as a peer to the gaim build.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3886 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -15,6 +15,8 @@ GAIM_TOP :=		../..
 GIFOLDER_ROOT :=		.
 GAIM_INSTALL_DIR :=	$(GAIM_TOP)/win32-install-dir
 DLL_INSTALL_DIR :=	$(GAIM_INSTALL_DIR)/plugins
+SIMIAS_LIB_DIR := ../../../win32-dev/simias
+SIMIAS_INCLUDE := $(SIMIAS_LIB_DIR)/include
 
 ##
 ## VARIABLE DEFINITIONS
@@ -50,12 +52,12 @@ INCLUDE_PATHS +=	-I$(GIFOLDER_ROOT) \
 			-I$(GAIM_TOP)/src \
 			-I$(GAIM_TOP)/src/win32 \
 			-I$(GAIM_TOP) \
-			$(SIMIAS_CLIENT_CFLAGS)
+			$(SIMIAS_INCLUDE)
 
 
 LIB_PATHS =		-L$(GTK_TOP)/lib \
 			-L$(GAIM_TOP)/src \
-			-L$(SIMIAS_CLIENT_PREFIX)
+			-L$(SIMIAS_LIB_DIR)
 
 
 ##
