Added "-I" to the simias include path.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3891 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -52,7 +52,7 @@ INCLUDE_PATHS +=	-I$(GIFOLDER_ROOT) \
 			-I$(GAIM_TOP)/src \
 			-I$(GAIM_TOP)/src/win32 \
 			-I$(GAIM_TOP) \
-			$(SIMIAS_INCLUDE)
+			-I$(SIMIAS_INCLUDE)
 
 
 LIB_PATHS =		-L$(GTK_TOP)/lib \
