Updated the make file.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3894 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -126,7 +126,7 @@ $(GAIM_TOP)/src/gaim.lib:
 ##
 
 $(TARGET).dll: $(OBJECTS) $(GAIM_TOP)/src/gaim.lib
-	$(CC) -shared $(OBJECTS) $(LIB_PATHS) $(LIBS) $(DLL_LD_FLAGS) -o $(TARGET).dll
+	$(CC) -shared $(OBJECTS) $(LIB_PATHS) $(LIBS) $(DLL_LD_FLAGS) -Wl,--export-all-symbols -Wl,--out-implib,$(TARGET).lib -o $(TARGET).dll
 
 ##
 ## CLEAN RULES
