added new sourceCVS: ----------------------------------------------------------------------
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3900 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -364,6 +364,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\HttpAuthentication\HttpAuth.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\HttpAuthentication\IAuthService.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
