more changes for rendezvous workgroup
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3916 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/mDnsDomain.csproj
+++ b/simias/src/mDnsDomain/mDnsDomain.csproj
@@ -114,6 +114,11 @@
                     AssemblyName = "System.Web.Services"
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.Services.dll"
                 />
+                <Reference
+                    Name = "mDnsResponder"
+                    AssemblyName = "mDnsResponder"
+                    HintPath = "external\mDnsResponder.dll"
+                />
             </References>
         </Build>
         <Files>
