--- a/gaim-ifolder/gifolder/Makefile.mingw
+++ b/gaim-ifolder/gifolder/Makefile.mingw
@@ -124,19 +124,19 @@ $(GAIM_TOP)/src/gaim.lib:
 ## GENERATE GSOAP FILES
 ##
 
-envC.c: $(srcdir)/stdsoap2.c
-	> $(srcdir)/env.h
-	$(GSOAP_PATH)/soapcpp2 -c -penv $(srcdir)/env.h
+envC.c: stdsoap2.c
+	> env.h
+	$(GSOAP_PATH)/soapcpp2 -c -penv env.h
 
-$(srcdir)/stdsoap2.c:
-	cp $(GSOAP_PATH)/stdsoap2.h $(srcdir)
-	cp $(GSOAP_PATH)/stdsoap2.c $(srcdir)
+stdsoap2.c:
+	cp $(GSOAP_PATH)/stdsoap2.h .
+	cp $(GSOAP_PATH)/stdsoap2.c .
 
-$(srcdir)/libsimiasgaim.h: $(srcdir)/stdsoap2.c $(SIMIAS_GAIM_DOMAIN_WSDL)
+libsimiasgaim.h: stdsoap2.c $(SIMIAS_GAIM_DOMAIN_WSDL)
 	$(GSOAP_PATH)/wsdl2h -c -o $@ $(SIMIAS_GAIM_DOMAIN_WSDL)
 
-$(srcdir)/simiasgaimClientLib.c: $(srcdir)/libsimiasgaim.h
-	$(GSOAP_PATH)/soapcpp2 -c -n -psimiasgaim $(srcdir)/libsimiasgaim.h
+simiasgaimClientLib.c: libsimiasgaim.h
+	$(GSOAP_PATH)/soapcpp2 -c -n -psimiasgaim libsimiasgaim.h
 
 ##
 ## BUILD DLL
