Removed libsimias-gaim
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3938 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-client-c.pc.in
+++ b/simias-client-c.pc.in
@@ -10,6 +10,6 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@prefix@/include/simias
 
-Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event -lsimiasgaim
+Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event
 Cflags: -I${includedir}
 
