simiasgaim* was being used erroneously.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3939 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -42,8 +42,11 @@ install-exec-local:
 	$(INSTALL_PROGRAM) simias.h $(DESTDIR)$(includedir)/simias
 
 uninstall-local:
-	rm -f $(DESTDIR)$(includedir)/simias/simiasgaim*
+	rm -f $(DESTDIR)$(includedir)/simias/simiasStub.h
+	rm -f $(DESTDIR)$(includedir)/simias/simias.nsmap
 	rm -f $(DESTDIR)$(includedir)/simias/stdsoap2.h
+	rm -f $(DESTDIR)$(includedir)/simias/simiasH.h
+	rm -f $(DESTDIR)$(includedir)/simias/simias.h
 
 clean-local:
 	rm -f stdsoap2.* *.xml simias.nsmap simiasC* simiasH* simiasS* env* soap*
