--- a/src/libsimias/Makefile.am
+++ b/src/libsimias/Makefile.am
@@ -42,8 +42,11 @@ install-exec-local:
 	$(INSTALL_PROGRAM) simias.h $(DESTDIR)$(includedir)/simias
 
 uninstall-local:
-	rm -f $(DESTDIR)$(includedir)/simias/simiasgaim*
+	rm -f $(DESTDIR)$(includedir)/simias/simiasStub.h
+	rm -f $(DESTDIR)$(includedir)/simias/simias.nsmap
 	rm -f $(DESTDIR)$(includedir)/simias/stdsoap2.h
+	rm -f $(DESTDIR)$(includedir)/simias/simiasH.h
+	rm -f $(DESTDIR)$(includedir)/simias/simias.h
 
 clean-local:
 	rm -f stdsoap2.* *.xml simias.nsmap simiasC* simiasH* simiasS* env* soap*
