Makefile.am files changed to support NDoc of WebServices for iFolder SDK and .cs files changed to successfully complete NDoc build
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3941 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -19,7 +19,8 @@ ndoc-nodeps:
 	rm -rf $(PACKAGE)-ndoc
 if WINDOWS
 	"$(NDOC_CMD)" \
-		`cygpath --windows "$(webbindir)/Simias.dll"`,`cygpath --windows "../src/Simias.dll/Simias.doc.xml"` \
+		`cygpath --windows "$(webbindir)/Simias.Web.dll"`,`cygpath --windows "../src/WebService/Simias.Web.doc.xml"` \
+		`cygpath --windows "$(webbindir)/Simias.POBox.Web.dll"`,`cygpath --windows "../src/POBoxWS/Simias.POBox.Web.doc.xml"` \
 		-documenter=MSDN -Title=Simias -OutputDirectory=$(PACKAGE)-ndoc
 else # NOT WINDOWS
 	"$(NDOC_CMD)" \
