Makefile.am files changed to support NDoc of WebServices for iFolder SDK and .cs files changed to successfully complete NDoc build
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3941 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/doc/Makefile.am
+++ b/ifolder/doc/Makefile.am
@@ -18,9 +18,13 @@ ndoc: $(PACKAGE)-install ndoc-nodeps
 ndoc-nodeps:
 	rm -rf $(PACKAGE)-ndoc
 if WINDOWS
-	"$(NDOC_CMD)" `cygpath --windows "$(bindir)/Novell.iFolder.dll"`,`cygpath --windows "../src/iFolder/Novell.iFolder.doc.xml"` -documenter=MSDN -Title=iFolder -OutputDirectory=$(PACKAGE)-ndoc
+	"$(NDOC_CMD)" \
+		`cygpath --windows "$(webbindir)/Novell.iFolder.Web.dll"`,`cygpath --windows "../src/WebService/Novell.iFolder.Web.doc.xml"` \
+		-documenter=MSDN -Title=iFolder -OutputDirectory=$(PACKAGE)-ndoc
 else # NOT WINDOWS
-	"$(NDOC_CMD)" "$(bindir)/Novell.iFolder.dll","../src/iFolder/Novell.iFolder.doc.xml" -documenter=MSDN -Title=iFolder -OutputDirectory=$(PACKAGE)-ndoc
+	"$(NDOC_CMD)" \
+		"$(bindir)/Novell.iFolder.dll","../src/iFolder/Novell.iFolder.doc.xml" \
+		-documenter=MSDN -Title=iFolder -OutputDirectory=$(PACKAGE)-ndoc
 endif # WINDOWS
 	tar -czf $(DOC_TARBALL) $(PACKAGE)-ndoc
 	@test "x" = "x$(DOC_TARBALLS)" || \
