Makefile.am files changed to support NDoc of SimpleServer for iFolder SDK and .cs files changed to successfully complete NDoc build
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3949 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -10,6 +10,7 @@ clean-local: ndoc-clean
 
 $(PACKAGE)-install:
 	$(MAKE) -C .. install
+	$(MAKE) -C ../other install
 
 if NDOC
 
@@ -21,6 +22,7 @@ if WINDOWS
 	"$(NDOC_CMD)" \
 		`cygpath --windows "$(webbindir)/Simias.Web.dll"`,`cygpath --windows "../src/WebService/Simias.Web.doc.xml"` \
 		`cygpath --windows "$(webbindir)/Simias.POBox.Web.dll"`,`cygpath --windows "../src/POBoxWS/Simias.POBox.Web.doc.xml"` \
+		`cygpath --windows "$(webbindir)/Simias.SimpleServer.dll"`,`cygpath --windows "../other/SimpleServer/Simias.SimpleServer.doc.xml"` \
 		-documenter=MSDN -Title=Simias -OutputDirectory=$(PACKAGE)-ndoc
 else # NOT WINDOWS
 	"$(NDOC_CMD)" \
