--- a/simias-client-c.pc.in
+++ b/simias-client-c.pc.in
@@ -1,14 +1,14 @@
 # pkg-config metadata file for simias event client
 Name: SimiasClient-C
 Description: C Libraries for Simias
-Version: @VERSION@
-Requires: @PKG_CONFIG_REQUIRES@
-Conflicts: @PKG_CONFIG_CONFLICTS@
+Version: @_VERSION_@
+Requires: @_PKG_CONFIG_REQUIRES_@
+Conflicts: @_PKG_CONFIG_CONFLICTS_@
 
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@prefix@/include/simias
+prefix=@_prefix_@
+exec_prefix=@_exec_prefix_@
+libdir=@_libdir_@
+includedir=@_prefix_@/include/simias
 
 Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event
 Cflags: -I${includedir}
