making changes for autobuild
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3965 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/application/ifolder.desktop.in
+++ b/ifolder/src/LinuxClient/application/ifolder.desktop.in
@@ -2,8 +2,8 @@
 Name=iFolder
 GenericName=iFolder
 Comment=iFolder Collaborative File Sharing Tool
-Exec=@bindir@/ifolder
-Icon=@datadir@/ifolder3/images/ifolder24.png
+Exec=@_bindir_@/ifolder
+Icon=@_datadir_@/ifolder3/images/ifolder24.png
 StartupNotify=false
 Terminal=false
 Type=Application
