--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -51,26 +51,7 @@ AM_CONDITIONAL(DOTNET, test "$CSC" = "csc")
 test "x$prefix" = xNONE && prefix=$ac_default_prefix
 test "x$exec_prefix" = xNONE && exec_prefix="${prefix}"
 
-#
-# Installation directory options.
-#
-# These are normally left unexpanded so users can "make install exec_prefix=/foo".
-# However, we want them expanded.
-#
-bindir="${exec_prefix}/bin"
-sbindir="${exec_prefix}/sbin"
-libexecdir="${exec_prefix}/libexec"
-datadir="${prefix}/share"
-sysconfdir="${prefix}/etc"
-sharedstatedir="${prefix}/com"
-localstatedir="${prefix}/var"
-libdir="${exec_prefix}/lib"
-includedir="${prefix}/include"
-oldincludedir="/usr/include"
-infodir="${prefix}/info"
-mandir="${prefix}/man"
-webdir="${exec_prefix}/web"
-webbindir="${exec_prefix}/web/bin"
+
 
 if test -z "$PKG_CONFIG_PATH"; then
     export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig"
@@ -313,10 +294,10 @@ case $IFOLDER_OS in
         #
         # Override Linux-like directory structure
         #
-        bindir="${exec_prefix}"
-        sbindir="${exec_prefix}"
-        libexecdir="${exec_prefix}"
-        libdir="${exec_prefix}"
+        bindir='${exec_prefix}'
+        sbindir='${exec_prefix}'
+        libexecdir='${exec_prefix}'
+        libdir='${exec_prefix}'
     ;;
 esac
 AC_SUBST(CDEF)
@@ -350,6 +331,15 @@ AC_SUBST(TLBX)
 AC_SUBST(webdir)
 AC_SUBST(webbindir)
 AC_SUBST(GSOAP_PATH)
+
+#
+# We have our own "standard" directories for web services.
+#
+webdir='${libexecdir}/web'
+webbindir='${webdir}/bin'
+AC_SUBST(webdir)
+AC_SUBST(webbindir)
+
 
 #
 # Set pkg-config variables
