--- a/ifolder/ifolder3-c.pc.in
+++ b/ifolder/ifolder3-c.pc.in
@@ -1,14 +1,14 @@
 # pkg-config metadata file for ifolder
 Name: iFolder-C
 Description: C Libraries for iFolder
-Version: @VERSION@
+Version: @_VERSION_@
 Requires: simias-client-c
-Conflicts: @PKG_CONFIG_CONFLICTS@
+Conflicts: @_PKG_CONFIG_CONFLICTS_@
 
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@prefix@/include/ifolder3
+prefix=@_prefix_@
+exec_prefix=@_exec_prefix_@
+libdir=@_libdir_@
+includedir=@_prefix_@/include/ifolder3
 
 Libs:-Wl,-rpath,${libdir} -L${libdir} -lifolderclient
 Cflags: -I${includedir}
