--- a/ifolder/ifolder3.pc.in
+++ b/ifolder/ifolder3.pc.in
@@ -1,13 +1,13 @@
 # pkg-config metadata file for ifolder
 Name: iFolder
 Description: iFolder
-Version: @VERSION@
-Requires: @PKG_CONFIG_REQUIRES@
-Conflicts: @PKG_CONFIG_CONFLICTS@
+Version: @_VERSION_@
+Requires: @_PKG_CONFIG_REQUIRES_@
+Conflicts: @_PKG_CONFIG_CONFLICTS_@
 
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
+prefix=@_prefix_@
+exec_prefix=@_exec_prefix_@
+libdir=@_libdir_@
 
-Libs:/lib:${libdir} @PKG_CONFIG_LIBS@
+Libs:/lib:${libdir} @_PKG_CONFIG_LIBS_@
 
