--- a/ifolder/Makefile.am
+++ b/ifolder/Makefile.am
@@ -12,11 +12,13 @@ endif
 
 EXTRA_DIST = tools $(srcdir)/$(PACKAGE)*.pc.in $(ADDITIONAL_LIB_FILES)
 
-ifolder3.pc: ifolder3.pc.in
+all: ifolder3.pc ifolder3-c.pc
+
+ifolder3.pc: $(srcdir)/ifolder3.pc.in
 	sed -e 's,@_VERSION_@,@VERSION@,g' -e 's,@_PKG_CONFIG_REQUIRES_@,@PKG_CONFIG_REQUIRES@,g' -e 's,@_PKG_CONFIG_CONFLICTS_@,@PKG_CONFIG_CONFLICTS@,g' -e 's,@_prefix_@,@prefix@,g' -e 's,@_exec_prefix_@,@exec_prefix@,g' -e 's,@_libdir_@,@libdir@,g' -e 's,@_PKG_CONFIG_LIBS_@,@PKG_CONFIG_LIBS@,g' $< > $@
 	chmod +x $@
 	
-ifolder3-c.pc: ifolder3-c.pc.in
+ifolder3-c.pc: $(srcdir)/ifolder3-c.pc.in
 	sed -e 's,@_VERSION_@,@VERSION@,g' -e 's,@_PKG_CONFIG_CONFLICTS_@,@PKG_CONFIG_CONFLICTS@,g' -e 's,@_prefix_@,@prefix@,g' -e 's,@_exec_prefix_@,@exec_prefix@,g' -e 's,@_libdir_@,@libdir@,g' $< > $@
 	chmod +x $@
 
@@ -55,8 +57,10 @@ if DEBUG
 endif
 endif
 
+CLEAN_FILES = ifolder3.pc ifolder3-c.pc
+
 clean-local:
-	rm -rf $(COMMON_CLEAN_FILES)
+	rm -rf $(COMMON_CLEAN_FILES) $(CLEAN_FILES)
 
 distclean-local:
 	rm -rf $(COMMON_DISTCLEAN_FILES)
