making changes for autobuild
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3972 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Common/MyDns.cs.in
+++ b/simias/src/Common/MyDns.cs.in
@@ -68,7 +68,7 @@ namespace Simias
 				process.StartInfo.RedirectStandardOutput = true;
 				process.StartInfo.CreateNoWindow = true;
 				process.StartInfo.UseShellExecute = false;
-				process.StartInfo.FileName = "@webbindir@/ifdata";
+				process.StartInfo.FileName = "@_webbindir_@/ifdata";
 				process.Start();
 				reader = process.StandardOutput;
 				process.WaitForExit(2000);
